--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <section>
             <h2>TECNOLOGIAS APREENDIDAS</h2>
-
+            <div id="icon">
             <ul>
                 <li class="tec"><img src="image/html5.png"></li>
                 <li class="tec"><img src="image/css-3.png"></li>
@@ -57,7 +57,7 @@
                 <li class="tec"><img src="image/jquery.png"></li>
                 <li class="tec"><img src="image/mongodb.png"></li>
             </ul>
-
+                </div>
         </section>
 
 
@@ -66,7 +66,7 @@
 
     </main>
 
-
+<script src="./scritps/java.js"></script>
 </body>
 
 </html>
