--- a/index.html
+++ b/index.html
@@ -38,26 +38,36 @@
 
         <section>
             <h2>TECNOLOGIAS APREENDIDAS</h2>
-            <div id="icon">
+
             <ul>
-                <li class="tec"><img src="image/html5.png"></li>
-                <li class="tec"><img src="image/css-3.png"></li>
-                <li class="tec"><img src="image/javascript.png"></li>
-                <li class="tec"><img src="image/firebase.png"></li>
+                <li class="tec"><img src="image/html5.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/css-3.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/javascript.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/firebase.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
 
             </ul>
-
+            <br>
             <h2>METAS</h2>
             <ul>
-                <li class="tec"><img src="image/bootstrap.png"></li>
-                <li class="tec"><img src="image/react.png"></li>
-                <li class="tec"><img src="image/node-js.png"></li>
-                <li class="tec"><img src="image/python.png"></li>
-                <li class="tec"><img src="image/electron.png"></li>
-                <li class="tec"><img src="image/jquery.png"></li>
-                <li class="tec"><img src="image/mongodb.png"></li>
+                <li class="tec"><img src="image/bootstrap.png"onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/react.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+                
+                <li class="tec"><img src="image/node-js.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/python.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/electron.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/jquery.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
+                <li class="tec"><img src="image/mongodb.png" onmouseover="imgGr(this)" onmouseout="imgNor(this)"></li>
+
             </ul>
-                </div>
+
         </section>
 
 
@@ -66,7 +76,7 @@
 
     </main>
 
-<script src="./scritps/java.js"></script>
+    <script src="./scritps/java.js"></script>
 </body>
 
 </html>
